# nuvola-api

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md  legacy-student-api.md  nuvola-devtools-findings.md  nuvola-student-functional-map.md
src/nuvola/: __init__.py
src/nuvola/adapters/legacy_student_api/: __init__.py  adapter.py
src/nuvola/adapters/storage/: __init__.py  file_session_store.py
src/nuvola/adapters/tenant_api/: __init__.py  adapter.py
src/nuvola/application/: __init__.py  dates.py  reports.py  service.py  use_cases.py
src/nuvola/cli/: main.py
src/nuvola/domain/: __init__.py  contracts.py  models.py
tests/integration/fixtures/: homework_day.json  homework_range.json  lesson_topics_range.json  subject_grades_detail.json
tests/integration/fixtures/student_readonly/: absences.json  booked_meetings.json  class_events.json  fillable_forms.json  latest_grades.json  notes.json  noticeboards.json  payments.json  questionnaires.json  student_events.json  subject_events.json  teacher_materials.json
tests/unit/: test_cli.py  test_dates.py  test_legacy_student_api.py  test_reports.py  test_service.py  test_storage.py
